--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ngoding Bersama</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <!-- ini navbar -->
+    <nav>
+        <div class="left bar">
+            <a href="#">Home</a>
+            <a href="#">Our Product</a>
+            <a href="#">About</a>
+        </div>
+
+        <div class="center bar">
+            <a href="#">Forwe</a>
+        </div>
+
+        <div class="right bar">
+            <a href="#">Contact us</a>
+        </div>
+    </nav>
+
+    <!-- ini Hero -->
+    <div class="hero">
+        <img src="img/monitor1.jpg" alt="">
+        <h1>Forwe, Belajar Kapanpun, Dimanapun</h1>
+        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam provident expedita eos, libero ad ipsa nisi
+            architecto voluptate alias vero.</h5>
+            
+    </div>
 
 </body>
+
 </html>
