--- a/index.html
+++ b/index.html
@@ -33,9 +33,54 @@
         <h1>Forwe, Belajar Kapanpun, Dimanapun</h1>
         <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam provident expedita eos, libero ad ipsa nisi
             architecto voluptate alias vero.</h5>
-            
+
     </div>
 
+
+    <!-- ini main -->
+    <main>
+        <div class="sr">
+            <h4>produk Kami</h4>
+        </div>
+        <div class="slide">
+            <div class="in">
+                <div class="row">
+                    <img src="img/htmlLogo.jpg" alt="">
+                    <img src="img/cssLogo.jpg" alt="">
+                </div>
+
+                <div class="row">
+                    <img src="img/jslogo.jpg" alt="">
+                    <img src="img/phpLogo.jpg" alt="">
+                </div>
+            </div>
+            <div class="jumbo">
+                <img src="img/bigOne.jpg" alt="">
+            </div>
+        </div>
+
+        <!-- Content -->
+        <div class="content">
+            <article>
+                <h4>Kami ada untuk anda</h4>
+                <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat aspernatur eligendi accusantium ex
+                    dolorum asperiores repellendus quod!</h5>
+            </article>
+
+            <article>
+                <h4>Fitur unggulan</h4>
+                <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam eos quibusdam unde omnis fugiat
+                    numquam.</h5>
+            </article>
+            <article>
+                <h5>Dengan Harga Terjangkau dan cicilan perbulan, anda bisa berhenti langganan kapan saja <br> dan bisa
+                    diakses dimanapun</h5> <br>
+                <h3>200K /Bln</h3>
+            </article>
+        </div>
+
+
+    </main>
 </body>
 
 </html>
