--- a/index.html
+++ b/index.html
@@ -79,7 +79,27 @@
             </article>
         </div>
 
-
+        <!-- About -->
+        <div class="sr">
+            <h4>About me</h4>
+        </div>
+        <div class="about">
+            <div class="in">
+                <div class="me">
+                    <h4>Apa itu forwe</h4>
+                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi esse delectus quidem atque
+                        expedita nam ad labore iste eaque animi modi, similique dolorem et aliquid nobis saepe quis
+                        assumenda! Temporibus.</h5>
+                </div>
+                <div class="me">
+                    <h4>Online Payment</h4>
+                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi esse delectus quidem atque
+                        expedita nam ad labore iste eaque animi modi, similique dolorem et aliquid nobis saepe quis
+                        assumenda! Temporibus.</h5>
+                </div>
+            </div>
+            <img class="aside" src="img/monitor2.jpg" alt="">
+        </div>
     </main>
 </body>
 
